--- a/html/createSequence.html
+++ b/html/createSequence.html
@@ -5,46 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>宏工具-技能循环</title>
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
+	<link rel="stylesheet" href="../css/common.css">
 	<script src="../js/vue.min.js" ></script>
 	<script src="../js/axios.min.js" ></script>
+	<script>let type = "createSequence";</script>
 </head>
 <body>
 <div class="container" id="container" flag="createSequence">
-    <div class="row" id="header">
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" onclick="toggle()">
-                        <span class="sr-only">Toggle</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="./index.html" style="color: #3c763d;">Macro</a>
-                </div>
-
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li id="index"><a href="./index.html" style="color: #3c763d;">快速创建</a></li>
-                        <li id="createSequence" class="active"><a href="./createSequence.html" style="color: #3c763d;">创建技能循环</a></li>
-                        <li id="macroIndex"><a href="./macroIndex.html" style="color: #3c763d;">手动组合</a></li>
-                        <li id="addMacro"><a href="./addMacro.html" style="color: #3c763d;">分享Your宏</a></li>
-                        <li id="macroList"><a href="./macroList.html" style="color: #3c763d;">搜索</a></li>
-                        <li id="info"><a href="./info.html" style="color: #3c763d;">宏指南</a></li>
-                    </ul>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-        </nav>
-    </div>
-    <div class="row" style="margin-top: 70px;" id="content">
+    {{template "header"}}
+    <div class="row" id="content">
         <div class="col-md-12">
             <label class="text-danger">Warning：正在测试中的功能，待完善中。。。</label>
         </div>
         <div class="col-md-12" id="btn_div">
-            <button class="btn btn-success" v-on:click="addTemp">增加一个技能框</button>
-            <button class="btn btn-success" v-on:click="create">创建技能循环</button>
+            <button class="btn btn-info" v-on:click="addTemp">增加一个技能框</button>
+            <button class="btn btn-info" v-on:click="create">创建技能循环</button>
         </div>
         <div class="col-md-12">
             <table class="table table-condensed" style="word-break:break-all; word-wrap:break-word;">
@@ -57,7 +32,7 @@
                 </thead>
                 <tbody>
                 <tr v-for="item1 in macros">
-                    <th scope="row">{{item1.id}}</th>
+                    <th scope="row">${item1.id}$</th>
                     <td v-html="item1.text"></td>
                     <td v-html="item1.desc"></td>
                 </tr>
@@ -67,125 +42,6 @@
 
     </div>
 </div>
-<script>
-    function toggle() {
-        let flag = document.getElementById("navbar-collapse-1").style.display;
-        if (flag === "block") {
-            document.getElementById("navbar-collapse-1").style.display = "none";
-        } else {
-            document.getElementById("navbar-collapse-1").style.display = "block";
-        }
-    }
-    let vue = new Vue({
-        el: "#content",
-        data: {
-            macros: [],
-            temp: {
-                "html": '<div class="col-md-12 temp" id="" style="border: 1px solid #c6c8ca;border-radius: 20px;margin: 10px 0px;padding: 10px 0px;">\n' +
-                '            <div class="form-group col-md-12">\n' +
-                '                <label>技能名称(不要带空格)：</label>\n' +
-                '                <input type="text" class="form-control skillName" name="skillName">\n' +
-                '            </div>\n' +
-                '            <div class="form-group col-md-12">\n' +
-                '                <label>冷却时间(单位：秒，比如6.4，顺发技能请填：0)：</label>\n' +
-                '                <input type="text" class="form-control cooldown" name="cooldown">\n' +
-                '            </div>\n' +
-                '            <div class="form-group col-md-12">\n' +
-                '                <label>技能优先级(数字越小，优先级越高！优先级越高，越先施放！)：</label>\n' +
-                '                <select class="form-control level" name="level">\n' +
-                '                    <option value="1">1</option>\n' +
-                '                    <option value="2">2</option>\n' +
-                '                    <option value="3">3</option>\n' +
-                '                    <option value="4">4</option>\n' +
-                '                    <option value="5">5</option>\n' +
-                '                    <option value="6">6</option>\n' +
-                '                    <option value="7">7</option>\n' +
-                '                    <option value="8">8</option>\n' +
-                '                    <option value="9">9</option>\n' +
-                '                    <option value="10">10</option>\n' +
-                '                </select>\n' +
-                '            </div>\n' +
-                '            <div class="form-group col-md-12">\n' +
-                '                <button class="btn btn-success remove" v-on:click="remove(this)">删除</button>\n' +
-                '            </div>' +
-                '        </div>',
-            },
-            tempNum: 1,
-        },
-        methods: {
-            create: function() {
-                let temps = document.getElementsByClassName("temp")
-
-                let len = temps.length;
-                let sequences = [];
-                let isExist = [];
-                for (let i = 0; i < len; i++) {
-                    let name = temps[i].getElementsByClassName("skillName")[0].value;
-                    let cooldown = temps[i].getElementsByClassName("cooldown")[0].value;
-                    let level = parseInt(temps[i].getElementsByClassName("level")[0].value);
-
-                    name = name.replace(/s|xA0/g, "");
-                    if (name === "") {
-                        alert("第" + (i + 1) + "个技能名称为空，请修改！");
-                        return;
-                    }
-                    if (cooldown === "" || cooldown === 0) {
-                        alert("第" + (i + 1) + "个技能冷却时间为空，请修改！");
-                        return;
-                    }
-                    if (isExist.indexOf(level) !== -1) {
-                        alert("第" + (i + 1) + "个技能优先级重复，请修改！");
-                        return;
-                    } else {
-                        isExist.push(level)
-                    }
-
-                    let sequence = {
-                        "skillName": name,
-                        "cooldown": parseInt(cooldown * 100),
-                        "level": level,
-                    };
-                    sequences.push(sequence);
-                }
-
-                axios.post('/create-sequence', sequences)
-                        .then(function(response) {
-                            vue.$data.macros = [];
-                            let text = {
-                                "id": 1,
-                                "text": response.data.text,
-                                "desc": response.data.desc,
-                            };
-                            vue.$data.macros.push(text);
-                        });
-            },
-            addTemp: function() {
-                if (vue.$data.tempNum >= 10) {
-                    alert("技能放的够多了，别贪心哦！！！");
-                } else {
-                    let temp = document.createElement("div");
-                    temp.innerHTML = vue.$data.temp.html;
-                    let btn = temp.getElementsByClassName("remove")[0];
-                    btn.id = "remove_btn" + vue.$data.tempNum;
-                    btn.onclick = function() {
-                        this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode);
-                    }
-                    vue.$data.tempNum += 1;
-
-                    document.getElementById("content").insertBefore(temp,
-                            document.getElementById("btn_div"));
-                }
-
-            }
-        },
-        created: function() {
-            axios.post('/log/createSequence', {})
-                    .then(function(response) {
-                        // console.log(response);
-                    });
-        }
-    })
-    vue.addTemp();
-</script>
+<script src="../js/createSequence.js"></script>
 </body>
 </html>
