--- a/html/header.html
+++ b/html/header.html
@@ -1,28 +1,42 @@
+{{define "header"}}
 <div class="row" id="header">
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" onclick="toggle()">
-                    <span class="sr-only">Toggle</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="./index.html" style="color: #3c763d;">Macro</a>
-            </div>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" onclick="toggle()">
+					<span class="sr-only">Toggle</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="/">Macro</a>
+			</div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li id="index"><a href="./index.html" style="color: #3c763d;">快速创建</a></li>
-                    <li id="createSequence"><a href="./createSequence.html" style="color: #3c763d;">创建技能循环</a></li>
-                    <li id="macroIndex"><a href="./macroIndex.html" style="color: #3c763d;">手动组合</a></li>
-                    <li id="addMacro"><a href="./addMacro.html" style="color: #3c763d;">分享Your宏</a></li>
-                    <li id="macroList"><a href="./macroList.html" style="color: #3c763d;">搜索</a></li>
-                    <li id="info"><a href="./info.html" style="color: #3c763d;">宏指南</a></li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-    </nav>
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li id="index"><a href="/">快速创建</a></li>
+					<li id="createSequence"><a href="/Macro/createSequence">创建技能循环</a></li>
+					<li id="macroIndex"><a href="/Macro/macroIndex">手动组合</a></li>
+					<li id="addMacro"><a href="/Macro/addMacro">分享你的宏</a></li>
+					<li id="macroList"><a href="/Macro/macroList">搜索</a></li>
+					<li id="info"><a href="/Macro/info">宏指南</a></li>
+				</ul>
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
+	</nav>
 </div>
+<script>
+	function toggle() {
+		let flag = document.getElementById("navbar-collapse-1").style.display;
+		if (flag === "block") {
+			document.getElementById("navbar-collapse-1").style.display = "none";
+		} else {
+			document.getElementById("navbar-collapse-1").style.display = "block";
+		}
+	}
+	document.getElementById(type).className = "active";
+</script>
+
+{{end}}
