--- a/html/macroCreate.html
+++ b/html/macroCreate.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>宏工具-快速创建</title>
-	<link rel="stylesheet" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" href="../css/common.css">
-	<script src="../js/vue.min.js" ></script>
-	<script src="../js/axios.min.js" ></script>
+{{template "css"}}
 </head>
 <body>
 <div class="container" id="container">
