--- a/html/macroInfo.html
+++ b/html/macroInfo.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>宏工具-资料指南</title>
-	<link rel="stylesheet" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" href="../css/common.css">
-	<script src="../js/axios.min.js" ></script>
+{{template "css"}}
 	<style>
 		.list-group li {
 			background-color: #000000;
