--- a/html/macroInfo.html
+++ b/html/macroInfo.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>宏工具-资料指南</title>
 {{template "css"}}
 	<style>
@@ -24,6 +22,9 @@
     <div class="row">
 		<h3>参考资料：</h3>
         <ul class="list-group">
+			<a href="http://api.battlenet.top">
+				<li class="list-group-item">魔兽世界API（中文）</li>
+			</a>
             <a href="https://bbs.nga.cn/read.php?tid=1858624">
                 <li class="list-group-item">[搬运]《考格威尔(Cogwheel's)宏命令完全指南》</li>
             </a>
