--- a/html/css.html
+++ b/html/css.html
@@ -1,4 +1,6 @@
 {{define "css"}}
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/common.css">
 <script src="../js/vue.min.js" ></script>
